--- a/styles.css
+++ b/styles.css
@@ -56,11 +56,34 @@ body {
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
   gap: 0.6rem;
+  height: 40rem;
+  width: 40rem;
+  position: relative;
+}
+
+.game-message {
+  /* display: none; */
+  color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -120%);
+
+  font-weight: 600;
+  font-size: calc(1.8vw + 3vh + 2vmin);
+  text-align: center;
+  white-space: nowrap;
+  color: #fff3b0;
+  text-shadow: 0px 0px 3px #fff3b0;
 }
 
 .cell {
-  font-size: 3.5rem;
-  padding: 6rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  font-size: 7rem;
+  /* padding: 6rem; */
   background-color: #9e2a2b;
   color: #fff7c8;
 }
