--- a/styles.css
+++ b/styles.css
@@ -61,20 +61,33 @@ body {
   position: relative;
 }
 
+.hide {
+  display: none;
+}
+
+.game-blur {
+  backdrop-filter: blur(3px);
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+}
+
 .game-message {
-  /* display: none; */
   color: white;
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -120%);
+  transform: translate(-50%, -70%);
 
   font-weight: 600;
-  font-size: calc(1.8vw + 3vh + 2vmin);
+  font-size: calc(3vw + 3vh + 2vmin);
   text-align: center;
   white-space: nowrap;
-  color: #fff3b0;
-  text-shadow: 0px 0px 3px #fff3b0;
+  color: #c1c1c1;
+  text-shadow: 0px 0px 3px #000;
 }
 
 .cell {
@@ -83,7 +96,6 @@ body {
   justify-content: center;
 
   font-size: 7rem;
-  /* padding: 6rem; */
   background-color: #9e2a2b;
   color: #fff7c8;
 }
