--- a/styles.css
+++ b/styles.css
@@ -19,12 +19,18 @@ body {
   height: 100vh;
 }
 
+.contnr {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
 .option-cards {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
+  gap: 5rem;
+  padding-bottom: 12rem;
 }
 
 .play-options {
@@ -32,7 +38,6 @@ body {
   justify-content: center;
   align-items: center;
   gap: 2rem;
-  flex-grow: 6;
 }
 
 .p-o {
@@ -44,7 +49,14 @@ body {
   width: 20rem;
   background-color: #9e2a2b;
   color: #fff3b0;
-  font-size: 3rem;
+  font-size: 3.5rem;
+}
+
+.p-o:active,
+.p-o:hover {
+  background-color: #000;
+  cursor: pointer;
+  transition: all 1s;
 }
 
 .container {
@@ -66,11 +78,6 @@ body {
   margin-top: 2rem;
   font-size: 8rem;
   color: #fff3b0;
-}
-
-.main {
-  text-align: center;
-  flex-grow: 1;
 }
 
 .players {
